# Wild-Bits

./: .gitignore  MANIFEST.in  README.md  main.py  package-lock.json  package.json  setup.py
.github/workflows/: pythonpublish.yml  release.yml
docs/: README.md
public/: index.html  manifest.json
src/: AceTheme.scss  App.jsx  App.scss  Colors.scss  CutIcon.jsx  RstbEditor.jsx  SarcEditor.jsx  YamlEditor.jsx  index.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/data/: files.txt
src-tauri/src/: main.rs  rstb.rs  sarc.rs  util.rs  yaml.rs
wildbits/: __init__.py  __main__.py  __version__.py  _rstb.py  _sarc.py  _yaml.py  addrstb.py  editor.py  files.py  maingui.py  name_hashes  updaterstb.py  updaterstb.ui  util.py
wildbits/assets/: .gitignore  index.html  package.json  qwebchannel.min.js  stuff.js  webpack.config.js
wildbits/assets/src/: index.js
wildbits/assets/src/js/: App.jsx  CutIcon.jsx  RstbEditor.jsx  SarcEditor.jsx  YamlEditor.jsx
wildbits/assets/src/scss/: AceTheme.scss  App.scss  Colors.scss
