[package]
name = "wildbits"
version = "2.0.0-beta1"
description = "Simple editor for BOTW file formats"
authors = ["Caleb Smith <email@calebdixonsmith.top>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/NiceneNerd/wildbits-rs"
default-run = "wildbits"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
anyhow = "1.0.40"
backtrace = "0.3.59"
botw-utils = "0.3.1"
crc = "1.8.1"
glob = "0.3.0"
lazy_static = "1.4.0"
msyt = { git = "https://github.com/NiceneNerd/msyt", rev = "f5d0c6e33cc8d12d66f1dd0d329ecf00bcbb9c51" }
rstb = "0.2.2"
roead = { git = "https://github.com/NiceneNerd/roead", rev = "63ac0eb0f738aab41b0b9cd67807fac3addac799" }
serde_json = "1.0"
serde_yaml = "0.8.17"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.0.0-beta.8", features = ["api-all"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
