[package]
name = "wildbits"
version = "2.0.0-beta2"
description = "Simple editor for BOTW file formats"
authors = ["Caleb Smith <email@calebdixonsmith.top>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/NiceneNerd/wildbits-rs"
default-run = "wildbits"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.2", features = [] }

[dependencies]
anyhow = "1.0.40"
backtrace = "0.3.59"
botw-utils = "0.3.1"
crc = "1.8.1"
glob = "0.3.0"
msyt = { git = "https://github.com/NiceneNerd/msyt", rev = "f5d0c6e33cc8d12d66f1dd0d329ecf00bcbb9c51" }
once_cell = "1.12.0"
rayon = "1.5.3"
rstb = "0.2.2"
roead = "0.11.1"
serde_json = "1.0"
serde_yaml = "0.8.17"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.0.2", features = ["api-all"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
